bg(loader): fix loader overlapping issues

--- a/src/index.css
+++ b/src/index.css
@@ -520,6 +520,7 @@ footer {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  z-index: 99;
 }
 
 .loader > img {
